<resources>
    <string name="app_name">TestApp</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth">Авторизоваться</string>
    <string name="enter_sum">Введите сумму</string>
    <string name="ok">OK</string>
    <string name="character_name">Character name</string>
    <string name="character_info">Character info</string>
    <string name="image">image</string>
    <string name="hint_name">Имя:</string>
    <string name="hint_gender">Гендер:</string>
    <string name="hint_status">Статус:</string>
    <string name="hint_species">Вид:</string>
    <string name="hint_born">Место рождения:</string>
    <string name="hint_location">Местонахождение:</string>
    <string name="save">save</string>
    <string name="no_connection">Отсутствует подключение к интернету!</string>
    <string name="reset_password">Восстановление пароля!</string>
    <string name="entry_email">Введите email</string>
    <string name="cancel">Отмена</string>
    <string name="apply">ОК</string>
    <string name="email">Email</string>
    <string name="password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="register">Регистрация</string>
    <string name="do_you_have_an_account">Уже зарегестрированы?</string>
    <string name="login">Войти</string>
    <string name="register_btn">Зарегистрироваться</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="reset_btn">Восстановить</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_btn">LOGIN</string>
    <string name="title_planner">Planner</string>
    <string name="new_task">Новая задача</string>
    <string name="edit_text">Введите текст</string>
</resources>