<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:srcCompat="@drawable/ic_not_save"
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:contentDescription="@string/image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/programmer"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llName"
            app:layout_constraintTop_toBottomOf="@+id/image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/hint_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_name"
                style="@style/body"/>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="name"
                android:layout_marginStart="8dp"
                style="@style/body"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llGender"
            app:layout_constraintTop_toBottomOf="@+id/llName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/hint_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_gender"
                style="@style/body"/>
            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="gender"
                android:layout_marginStart="8dp"
                style="@style/body"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llStatus"
            app:layout_constraintTop_toBottomOf="@+id/llGender"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/hint_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_status"
                style="@style/body"/>
            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="status"
                android:layout_marginStart="8dp"
                style="@style/body"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llSpecies"
            app:layout_constraintTop_toBottomOf="@+id/llStatus"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/hint_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_species"
                style="@style/body"/>
            <TextView
                android:id="@+id/species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="species"
                android:layout_marginStart="8dp"
                style="@style/body"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llBorn"
            app:layout_constraintTop_toBottomOf="@+id/llSpecies"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/hint_born"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_born"
                style="@style/body"/>
            <TextView
                android:id="@+id/born"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="born"
                android:layout_marginStart="8dp"
                style="@style/body"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/llLocation"
            app:layout_constraintTop_toBottomOf="@+id/llBorn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">
            <TextView
                android:id="@+id/hint_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_location"
                style="@style/body"/>
            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="location"
                android:layout_marginStart="8dp"
                style="@style/body"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>